--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>To Do List</h1>
     <div class="container">
         <input id="inputField" type="text">
-        <button id="addToDo">+</button>
+        <button id="addToDo">Add</button>
         <div class="to-dos" id="toDoContainer">
         </div>
     </div>
